# narwhal

./: Cargo.toml  README.md
.assets/: protocol.drawio
bavss/: Cargo.toml
bavss/src/: breeze.rs  breeze_confirm.rs  breeze_message_handler.rs  breeze_reconstruct.rs  breeze_reply.rs  breeze_result.rs  breeze_share.rs  breeze_structs.rs  lib.rs  merkletree.rs
bavss/src/breeze/: batch_eval.rs  breeze.rs  breeze_confirm.rs  breeze_message_handler.rs  breeze_out.rs  breeze_reconstruct.rs  breeze_reconstruct_dealer.rs  breeze_reply.rs  breeze_result.rs  breeze_share.rs  breeze_share_dealer.rs  merkletree.rs  mod.rs  utils.rs
bavss/src/breeze_origin/: batch_eval.rs  breeze.rs  breeze_confirm.rs  breeze_message_handler.rs  breeze_reconstruct.rs  breeze_reconstruct_dealer.rs  breeze_reply.rs  breeze_result.rs  breeze_share.rs  breeze_share_dealer.rs  merkletree.rs  mod.rs  utils.rs
bavss/src/breeze_pq/: breeze.rs  breeze_confirm.rs  breeze_message_handler.rs  breeze_reconstruct.rs  breeze_reconstruct_dealer.rs  breeze_reply.rs  breeze_result.rs  breeze_share.rs  breeze_share_dealer.rs  calculation.rs  mod.rs  polynomial.rs  zq_int.rs
benchmark/: README.md  fabfile.py  settings.json
benchmark/benchmark/: aggregate.py  commands.py  config.py  instance.py  local.py  logs.py  plot.py  remote.py  settings.py  utils.py
bft/src/: init_bft.rs
config/: Cargo.toml
config/src/: lib.rs
consensus/: Cargo.toml
consensus/src/: state.rs
consensus/src/dolphin/: committer.rs  core.rs  virtual_state.rs
consensus/src/tusk/: mod.rs
consensus/src/tusk/tests/: tusk_tests.rs
crypto/: Cargo.toml
crypto/src/: dilithum_sig.rs  ed25519_sig.rs  lib.rs
crypto/src/tests/: crypto_tests.rs
drb_coordinator/: Cargo.toml
drb_coordinator/src/: beacon_hub.rs  coordinator.rs  error.rs  lib.rs
gen_files/: Cargo.toml
gen_files/src/: gen_breeze_crs.rs  main.rs
model/: Cargo.toml
model/src/: bft_message.rs  breeze_structs.rs  breeze_universal.rs  file_io.rs  lib.rs  scale_type.rs  types_and_const.rs
network/: Cargo.toml
network/src/: receiver.rs  reliable_sender.rs  simple_sender.rs
node/: Cargo.toml
node/src/: benchmark_client.rs  main.rs
primary/: Cargo.toml
primary/src/: aggregators.rs  certificate_waiter.rs  core.rs  error.rs  header_waiter.rs  lib.rs  messages.rs  payload_receiver.rs  primary.rs  proposer.rs  synchronizer.rs
primary/src/tests/: common.rs  proposer_tests.rs
secondary_bft/: Cargo.toml
secondary_bft/src/: init_bft.rs  lib.rs
worker/: Cargo.toml
worker/src/: helper.rs  processor.rs  quorum_waiter.rs  synchronizer.rs  worker.rs
worker/src/tests/: common.rs
