[package]
name = "node"
version = "0.1.0"
authors = ["George Danezis <gdanezis@fb.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
tokio-util = { version = "0.6.2", features= ["codec"] }
clap = "2.33.3"
env_logger = "0.7.1"
log = "0.4.11"
bytes = "1.0.1"
anyhow = "1.0.40"
rand = "0.7.3"
futures = "0.3.15"

config = { path = "../config" }
store = { path = "../store" }
crypto = { path = "../crypto" }
primary = { path = "../primary" }
worker = { path = "../worker" }
consensus = { path = "../consensus" }
model = { path = "../model" }
drb_coordinator = { path = "../drb_coordinator"}
bavss = { path = "../bavss"}
secondary_bft = { path = "../secondary_bft" }

[features]
benchmark = ["worker/benchmark", "primary/benchmark", "consensus/benchmark"]
dolphin = ["consensus/dolphin", "config/dolphin"]
pq = ["crypto/pq", "primary/pq", "worker/pq"]
[[bin]]         
name = "benchmark_client"   
path = "src/benchmark_client.rs" 
required-features = ["benchmark"] 