[package]
name = "secondary_bft"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.43.0"

model = { path = "../model"}
config = { path = "../config"}
network = { path = "../network" }
crypto = { path = "../crypto"}
async-trait = "0.1.87"
bytes = "1.10.0"
bincode = "1.3.3"
futures = "0.3.31"
serde = "1.0.219"
log = "0.4.27"
sha2 = "0.9.9"